--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -4,6 +4,8 @@ The primary method by which researchers interact with their data in `yt` is via 
 Nearly all of the visualization that is done using `yt` utilizes the matplotlib library for actual deposition of pixels into an image format, although all of the *input* to that deposition is conducted by `yt`.
 Making this distinction is important, because it underscores the relationship between the different libraries and how they exist in the ecosystem of scientific software; `yt` does not replace matplotlib, but rather, augments it by providing a grammar of analysis of volumetric data and defining how that grammar is translated into visual representations as presented by matplotlib.
 
+**CC: discuss ray traversal for patch-based datasets + oct-based datasets.**
+
 ### Pixelizing Variable-Mesh Objects
 
 ### Higher-Order Unstructured Mesh Elements
