add gradient computation

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -80,6 +80,10 @@ Illustration of a binary search through a quadtree. The search starts at the roo
 The procedure is easily generalized in 3D.
 ](images/octree/binary_tree_research_2D.pdf){#fig:binary-search}
 
+![
+Scheme of the AMR structure used to estimate the gradient of a quantity in the central oct (red). Octs are represented in thick lines, cells in thin lines and virtual cells in dashed lines. _Left panel:_ The virtual cell values on a $4^3$ grid are interpolated from the nearest cell in the AMR grid. If the nearest cell is at the same level, its value is directly used. If the cell is at a coarser level, its value is directly used (for example $f_{31}$ and $f_{32}$ have the value of the green cell). If the cell is refined, the mean of its children is used (for example $f_{20}$ is the mean of all the blue cells). _Right panel:_ Gradients are estimated using a first-order finite difference centred scheme on the $4^3$ virtual cells.
+](images/octree/gradient_computation.pdf){#fig:octree-gradient}
+
 ### SPH Analysis
 
 ### Unstructured Mesh Analysis
