--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -55,7 +55,7 @@ The spatial-tree optimization substantially increases performance for "wide and 
 
 ### Octree Analysis {#sec:octree_analysis}
 
-`yt` supports octree-based AMR datasets (RAMSES, Art).
+`yt` supports octree-based AMR datasets (primarily RAMSES and ART, but also the output from the octree-based radiative transfer code Hyperion).
 `yt` stores a copy of the octree using a pointer-based approach, where each oct points to its eight children (if refined).
 The octs living at the coarsest level of the simulation are stored as a uniform grid. For domain-decomposed datasets, each domain is represented as a sparse octree, where the root octs are stored as a list and efficiently accessed using a binary search, ensuring each root oct is found in $O(log(N))$ time, where $N$ is the number of root octs in the domain.
 Each oct is represented as structure that contains the on-file location of the oct (`file_ind`) and its in-memory location (`domain_ind`), the index of the domain it belongs to (`domain`) and a list of pointers to its children (up to eight in 3D). This requires at most 88 bytes per oct.
@@ -89,5 +89,4 @@ Scheme of the AMR structure used to estimate the gradient of a quantity in the c
 ### Unstructured Mesh Analysis
 
 ### Non-Cartesian Coordinates {#sec:noncartesian}
-
 
