--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -68,7 +68,7 @@ In a first pass, the number of selected cells is computed and in a second pass, 
 Second, `yt` relies on the on-file location obtained from the octree traversal to lazily read data from disk.
 This ensures that only the minimal amount of data is being read and is particularly efficient when accessing a region spanning a small number of domains and/or a small number of refinement levels.
 
-`yt` also fully supports accessing neighboring cells.
+Recently, `yt` has been extended to fully supports accessing neighboring cells.
 This is achieved by computing one-cell thick quantities around each oct, which emulates the `ghost zones` found in patch-based codes. This approach has the advantage of abstracting the octree structure and provides a common interface to create derived fields, as described in **CC: any section describing this?**.
 The 56 neighbors ($4^3 - 2^3$) surrounding each oct are found by performing a search in the octree, which finds any neighbor in $O(\mathrm{level})$, where $\mathrm{level}$ is the level of the central oct.
 The search is illustrated on Figure {@fig:binary-search}.
@@ -89,4 +89,3 @@ Scheme of the AMR structure used to estimate the gradient of a quantity in the c
 ### Unstructured Mesh Analysis
 
 ### Non-Cartesian Coordinates {#sec:noncartesian}
-
