--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -69,7 +69,7 @@ Second, `yt` relies on the on-file location obtained from the octree traversal t
 This ensures that only the minimal amount of data is being read and is particularly efficient when accessing a region spanning a small number of domains and/or a small number of refinement levels.
 
 Recently, `yt` has been extended to fully supports accessing neighboring cells.
-This is achieved by computing one-cell thick quantities around each oct, which emulates the `ghost zones` found in patch-based codes. This approach has the advantage of abstracting the octree structure and provides a common interface to create derived fields, as described in **CC: any section describing this?**.
+This is achieved by computing one-cell thick quantities around each oct, which emulates the "ghost zones" found in patch-based codes. This approach has the advantage of abstracting the octree structure and provides a common interface to create derived fields, as described in **CC: any section describing this?**.
 The 56 neighbors ($4^3 - 2^3$) surrounding each oct are found by performing a search in the octree, which finds any neighbor in $O(\mathrm{level})$, where $\mathrm{level}$ is the level of the central oct.
 The search is illustrated on Figure {@fig:binary-search}.
 **CC: remove this? Instead of starting the search from the root grid, it could be possible to start from the central oct and go upwards. This has not been implemented yet.**
