add stuff about selection diagrams

--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -44,15 +44,15 @@ And, to demonstrate the ability of yt to construct boolean selectors from these 
 
 ![
 A selection of data in a low-resolution simulation from a rectangular prism.
-](images/selection/reg2.svg){#fig:reg2}
+](images/selectors/reg2.svg){#fig:reg2}
 
 ![
 A selection of data in a low-resolution simulation from a sphere.
-](images/selection/sp2.svg){#fig:sp2}
+](images/selectors/sp2.svg){#fig:sp2}
 
 ![
 The logical `NOT` of the regions from Figures @fig:reg2 and @fig:sp2.
-](images/selection/reg2_not_sp2.svg){#fig:reg2_not_sp2}
+](images/selectors/reg2_not_sp2.svg){#fig:reg2_not_sp2}
 
 
 ### Fast and Slow Paths
@@ -103,3 +103,5 @@ In columns to the right, we provide information as to whether there is an availa
 | Union                    | Selection (Bool)         |
 
 Table: Selection objects and their types. {#tbl:selection-objects}
+
+
