--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -2,10 +2,10 @@
 
 Advances in both hardware and software facilitate astrophysical datasets of growing complexity and size.
 The datasets produced by numerical simulations can currently reach sizes of $\sim$100 Tbytes split across hundreds of files [e.g.
-@raw:Croft2015].
+@Croft2015].
 For even simple analysis tasks, the cost of incrementally reading datasets this large into memory is quite high.
 This problem is not limited to theoretical work.
-During operations the Large Synoptic Survey Telescope (LSST) will produce 15 Tbytes of data each night [@raw:Juric2015a].
+During operations the Large Synoptic Survey Telescope (LSST) will produce 15 Tbytes of data each night [@Juric2015a].
 In order to analyze such large datasets, we need innovative techniques for quickly indexing and selecting data without loading the entire dataset into memory.
 We present a technique for using Morton bitmap indexes to map files and accelerate data analysis.
 
@@ -31,9 +31,9 @@ Panel (a) is an example where random parts of the domain are contained within ea
 In such a case, many files will need to be loaded for contiguous selections within the domain.
 In panel (b), the domain was split between the files along the $x$ dimension.
 Fewer files will need to be loaded for queries along the $y$-dimension, but contiguous selection in $x$ will still require a greater number of files since the partition is not well localized in that dimension.
-Panels (c) and (d) are both examples of partitioning the domain between the files along a space filling curve [Morton and Hilbert curves respectively; @raw:Morton1996; @raw:Hilbert1970].
+Panels (c) and (d) are both examples of partitioning the domain between the files along a space filling curve [Morton and Hilbert curves respectively; @Morton1996; @Hilbert1970].
 These partitions have the greatest chance of limiting the number of files that must be loaded for a contiguous selection with slightly improved localization for the Hilbert curve.
-Consequently, Hilbert curves have also been used for load-balancing in parallel simulation codes like Gadget-2 [@raw:Springel2005b] and RAMSES [@raw:Teyssier2001].
+Consequently, Hilbert curves have also been used for load-balancing in parallel simulation codes like Gadget-2 [@Springel2005b] and RAMSES [@Teyssier2001].
 
 Figure @fig:selector1 shows examples of three selections within the above domain partitions.
 
@@ -70,7 +70,7 @@ Although the same result can be achieved by re-sorting the data itself, creating
 Morton Indices
 --------------
 
-Morton ordering maps multidimensional data onto a one-dimensional space filling curve [@raw:Morton1996].
+Morton ordering maps multidimensional data onto a one-dimensional space filling curve [@Morton1996].
 This is done by breaking up the domain into cells where each cell's position within the $N$-dimensional domain can be described by $N$ integers.
 The Morton index of the cell is then created by interleaving the bits of the $N$ integers to create a single integer that fully describes the cell's position (see panel (b) Figure @fig:zorder).
 As seen in panel (a) of Figure @fig:zorder, ordering of the cells by their Morton indices forms a space filling Z-curve.
@@ -84,27 +84,27 @@ The precision of a single Morton index is only limited by the size of the intege
 For instance, 64-bit Morton indices in 3 dimensions can be localized to $1/2^{21}$th of the domain in each dimension ($3\times21$ bits = 63 bits).
 If the domain is binarily divided into subcells to some order $k$ in each dimension (i.e.
 $2^{Nk}$ cells), coarser Morton indices can be obtained by simply masking lower bits.
-Morton ordering has been used to speed up quadtree construction [@raw:Hjaltason2002], nearest neighbor searches [@raw:Connor2010], and range queries [@raw:Orenstein1984].
+Morton ordering has been used to speed up quadtree construction [@Hjaltason2002], nearest neighbor searches [@Connor2010], and range queries [@Orenstein1984].
 By recording the indices of the cells containing data from each file within a dataset, Morton indices can also be used to construct one-dimensional maps of an $N$-dimensional dataset that can be represented as bitmaps.
 
 #### Bitmaps & EWAH Compression
 
 Bitmap indexes use the values of single bits within an array of bits to describe dataset properties.
 This form requires minimal memory and can be filtered using computationally inexpensive boolean operations.
-Bitmap indexes have long been popular for use with large data warehouses [@raw:Wu1998; @raw:Chan1998; @raw:Chan1999].
-However, as scientific datasets have become larger and more complex, they have also begun to gain traction in a diverse array of scientific fields including geosciences [@raw:Malensek2014], earth sciences, rocket science [@raw:Sinha2006; @raw:Sinha2007], high-energy physics [@raw:Stockinger2000], and combustion [@raw:Wu2003].
+Bitmap indexes have long been popular for use with large data warehouses [@Wu1998; @Chan1998; @Chan1999].
+However, as scientific datasets have become larger and more complex, they have also begun to gain traction in a diverse array of scientific fields including geosciences [@Malensek2014], earth sciences, rocket science [@Sinha2006; @Sinha2007], high-energy physics [@Stockinger2000], and combustion [@Wu2003].
 
 In cases where data attributes can take on a finite set of values, one bitmap is constructed for each possible attribute value.
 Within the bitmap each bit specifies whether or not the corresponding data point has that value.
 In this way, queries for data with a single attribute value require consulting only one bitmap and queries of multiple attributes/values can be done using boolean AND operations on the corresponding bitmaps.
-In the case of scientific data, which often contains floating point value attributes, the attributes must be binned prior to constructing the bitmaps [@raw:Yu1998; @raw:Shoshani1999; @raw:Stockinger2004].
+In the case of scientific data, which often contains floating point value attributes, the attributes must be binned prior to constructing the bitmaps [@Yu1998; @Shoshani1999; @Stockinger2004].
 Here, Morton indices are used to bin N-dimensional floating point data onto one-dimension.
 As a result, each file can be described by one bitmap.
 
 For each file within a dataset, the Morton indices touched by the data within that file can then be stored in a bitmap index for future searches where the value of bit $j$ indicates whether or not Morton index $j$ is touched by the file in question.
 For Morton indexing of order $k$, this would result in a bitmap of length $2^{Nk}$ bits per file.
 For large bitmaps, this can become costly in terms of memory and the time required to perform bitmap operations.
-However, Enhanced Word-Aligned Hybrid (EWAH) compression can be used to limit these costs, particularly when the domain is densely or sparsely populated in localized regions [@raw:Wu2001; @raw:Lemire2010; @raw:Kaser2016].
+However, Enhanced Word-Aligned Hybrid (EWAH) compression can be used to limit these costs, particularly when the domain is densely or sparsely populated in localized regions [@Wu2001; @Lemire2010; @Kaser2016].
 
 An EWAH compressed bitmap will be smaller when there are long sequences, or "runs," of identical values.
 This means that an EWAH compressed bitmap will be smallest if either all or none of its bits are set.
@@ -129,7 +129,7 @@ The cells containing points from either file are shaded accordingly such that ce
 The smaller grids within these cells on the right are the boundaries of 2nd order Morton cells refining the collisions.
 ](images/bitmap/collisions.png){#fig:collision}
 
-Collisions can be limited by either increasing the order of the index or allowing for multi-resolution indexes [@raw:Sinha2006; @raw:Sinha2007].
+Collisions can be limited by either increasing the order of the index or allowing for multi-resolution indexes [@Sinha2006; @Sinha2007].
 Panel (b) of Figure @fig:collision demonstrates an example of nesting a second index within cells that contain collisions.
 In those cells which contained collisions, a 2nd order Morton index was added.
 Those cells with collisions at the level of the refined index (purple cells in panel (b)) cover a much smaller portion of the domain than the cells with collisions at the level of the coarse index (purple cells in panel (a)).
@@ -156,7 +156,7 @@ For the more localized partitions in panels (c) and (d), only two files touch ea
 
 It is often the case that, in selecting a region, additional padding around the region should be included in the selection.
 This is particularly useful for algorithms that need information about neighboring points in the domain [e.g.
-gas properties in simulations using Smoothed Particle Hydrodynamics; SPH; @raw:Monaghan1992; @raw:Springel2001; @raw:Springel2005b].
+gas properties in simulations using Smoothed Particle Hydrodynamics; SPH; @Monaghan1992; @Springel2001; @Springel2005b].
 For Morton indices, this is straightforward as the indices neighboring Morton cells can be found by incrementing the bits corresponding to each dimension.
 We have included the ability to pad selectors with some number of Morton cells referred to as 'ghost zones'.
 Those files that touch ghost zones, but not the selector itself are referred to below as 'ghost files'.
@@ -359,7 +359,7 @@ While using an existing bitmap index decreases the time required for queries in 
 Therefore, in the case where only a small number of selections need to be made, it will be more efficient to perform direct queries of the data than to construct and utilize the bitmap index.
 
 Bitmap indexing is particularly useful in astronomy and astrophysics.
-Output from N-body simulations is often split between multiple files to take advantage of parallel I/O and the domain decomposition generally leads to localized partitioning between files [@raw:Springel2001; @raw:Springel2005b; @raw:Hopkins2015].
+Output from N-body simulations is often split between multiple files to take advantage of parallel I/O and the domain decomposition generally leads to localized partitioning between files [@Springel2001; @Springel2005b; @Hopkins2015].
 
 Currently, this technique is most useful for datasets split across multiple files.
 However, it can also be applied to single files by dividing the file's contents into chunks.
@@ -368,8 +368,8 @@ In addition, while the current implementation of this method is designed for thr
 
 ### Code {#sec:code}
 
-These procedures have been implemented as part of the yt python package [@raw:Turk20d11a] in order to facilitate the analysis of large astrophysical N-body simulations; currently undergoing review for inclusion in a future version of yt (3.4 or later), our implementation is available at https://bitbucket.org/langmm/yt-bitmap.
-The open source EWAHBoolArray C++ package is used for implementing EWAH bitmaps [@raw:Lemire2010; @raw:Kaser2016] and exposed to Python using Cython [@raw:Behnel2011].
+These procedures have been implemented as part of the yt python package [@Turk20d11a] in order to facilitate the analysis of large astrophysical N-body simulations; currently undergoing review for inclusion in a future version of yt (3.4 or later), our implementation is available at https://bitbucket.org/langmm/yt-bitmap.
+The open source EWAHBoolArray C++ package is used for implementing EWAH bitmaps [@Lemire2010; @Kaser2016] and exposed to Python using Cython [@Behnel2011].
 
 ### Acknowledgment {#acknowledgment .unnumbered}
 
