Fix index space table

--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -20,14 +20,14 @@ These coordinate handlers also provide transformations between different spaces,
 
 At present, coordinate spaces are defined in the following spaces:
 
-| Coordinate system               | Axes                                             |
-|---------------------------------|--------------------------------------------------|
-| Cartesian coordinates           | $x, y, z$                                        |
-| Cylindrical polar coordinates   | $r, z, \theta \in [] $                           |
-| Spherical coordinates           | $r, \theta, \phi$                                |
-| Geographic coordinates          | latitude $\in [] $, longitude $\in []$, altitude |
-| Internal geographic coordinates | latitude, longitude, depth                       |
-| Spectral cube                   | Image $x$, Image $y$ and $\nu$                   |
+| Coordinate system               | Axes                                                        |
+|---------------------------------|-------------------------------------------------------------|
+| Cartesian coordinates           | $x, y, z$                                                   |
+| Cylindrical polar coordinates   | $r, z, \theta \in [0, 2 \pi] $                              |
+| Spherical coordinates           | $r, \theta, \phi$                                           |
+| Geographic coordinates          | latitude $\in [0, 180]$, longitude $\in [0, 360]$, altitude |
+| Internal geographic coordinates | latitude, longitude, depth                                  |
+| Spectral cube                   | Image $x$, Image $y$ and $\nu$                              |
 
 Future developments may involve code generation for arbitrary coordinate systems, using SymPy or other libraries.
 Independent of the visualization methods (which can often be reused), the development of coordinate systems is largely rote, applying straightforward mathematics to construct derived field definitions.
