Add indexing script and d3 plugin

--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -8,7 +8,24 @@ Importantly, however, yt distinguishes between the *coordinate* space a dataset 
 This distinction is the most relevant among datasets and data formats where the organization is *implicit*, rather than *explicit*; for instance, in a grid patch dataset, data variable locations are often only specified implicitly.
 For a grid volume that covers a given region, the relationship between the "index" value of a cell (for instance, $i,j,k$) and its position in space (for instance, $x, y, z$ or $r, \theta, \phi$) requires transformation between a logically-Cartesian decomposition of the space and the potentially-non Cartesian space that it represents.
 
-**This needs a diagram**
+For instance, there may be a cell that spans $r$ from <span id="coordinate_info_r">0.25 to 0.375</span> and 
+$\theta$ from <span id="coordinate_info_theta">30 to 45</span>, which is defined by the array values defined in cell <span id="coordinate_info_ij">4, 10</span>.
+
+![
+Some selection stuff.
+](images/indexing/coordinate_space.svg){#fig:coordinate_space}
+
+<script>
+document.addEventListener("D3Loaded", function(event) { 
+  d3.selectAll("g#coordinate_space_figure g")
+    .on("mouseover", (event) => {
+      dataset = event.target.dataset;
+      d3.select("#coordinate_info_r").text(dataset["r0"] + " to " + dataset["r1"]);
+      d3.select("#coordinate_info_theta").text(dataset["theta0"] + " to " + dataset["theta1"]);
+      d3.select("#coordinate_info_ij").text(dataset["cellI"] + ", " + dataset["cellJ"]);
+    });
+});
+</script>
 
 ### Abstraction of Coordinate Systems
 
@@ -32,3 +49,5 @@ At present, coordinate spaces are defined in the following spaces:
 Future developments may involve code generation for arbitrary coordinate systems, using SymPy or other libraries.
 Independent of the visualization methods (which can often be reused), the development of coordinate systems is largely rote, applying straightforward mathematics to construct derived field definitions.
 As such, using mechanisms in SymPy for construction of relationships between coordinate systems may be a feasible method of developing code-generation for coordinate system handlers in yt.
+
+
