Updating diagram and interactivity

--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -8,8 +8,8 @@ Importantly, however, yt distinguishes between the *coordinate* space a dataset 
 This distinction is the most relevant among datasets and data formats where the organization is *implicit*, rather than *explicit*; for instance, in a grid patch dataset, data variable locations are often only specified implicitly.
 For a grid volume that covers a given region, the relationship between the "index" value of a cell (for instance, $i,j,k$) and its position in space (for instance, $x, y, z$ or $r, \theta, \phi$) requires transformation between a logically-Cartesian decomposition of the space and the potentially-non Cartesian space that it represents.
 
-For instance, there may be a cell that spans $r$ from <span id="coordinate_info_r">0.25 to 0.375</span> and 
-$\theta$ from <span id="coordinate_info_theta">30 to 45</span>, which is defined by the array values defined in cell <span id="coordinate_info_ij">4, 10</span>.
+For instance, there may be a cell that spans $r$ from <span id="coordinate_info_r" style="font-family: monospace;">0.25 to 0.375</span> and 
+$\theta$ from <span id="coordinate_info_theta" style="font-family: monospace;">30 to 45</span>, which is defined by the array values defined in cell <span id="coordinate_info_ij" style="font-family: monospace;">4, 10</span>.
 
 ![
 Some selection stuff.
@@ -17,12 +17,14 @@ Some selection stuff.
 
 <script>
 document.addEventListener("D3Loaded", function(event) { 
-  d3.selectAll("g#coordinate_space_figure g")
+  d3.selectAll("svg#index_coord_figure .cell").classed("active");
+  d3.selectAll("svg#index_coord_figure .cell")
     .on("mouseover", (event) => {
       dataset = event.target.dataset;
-      d3.select("#coordinate_info_r").text(dataset["r0"] + " to " + dataset["r1"]);
-      d3.select("#coordinate_info_theta").text(dataset["theta0"] + " to " + dataset["theta1"]);
+      d3.select("#coordinate_info_r").text(dataset["r-0"] + " to " + dataset["r-1"]);
+      d3.select("#coordinate_info_theta").text(dataset["theta-0"] + " to " + dataset["theta-1"]);
       d3.select("#coordinate_info_ij").text(dataset["cellI"] + ", " + dataset["cellJ"]);
+      d3.selectAll("svg#index_coord_figure .cell").classed("highlighted", (d, i, n) => (n[i].dataset["cell"] == dataset["cell"]));
     });
 });
 </script>
