Event name changed to SVGLoaded

--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -19,7 +19,7 @@ Index space to coordinate space mapping.  On the left is an example of how data 
 ](images/indexing/coordinate_space.svg){#fig:coordinate_space}
 
 <script>
-document.addEventListener("D3Loaded", function(event) { 
+document.addEventListener("SVGLoaded", function(event) { 
   d3.selectAll("svg#index_coord_figure .cell").classed("active");
   d3.selectAll("svg#index_coord_figure .cell")
     .on("mouseover", (event) => {
