--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -10,7 +10,40 @@ Making this distinction is important, because it underscores the relationship be
 
 ### Higher-Order Unstructured Mesh Elements
 
+
 ### Software Volume Rendering
+
+The volume rendering is based on classical concepts for rendering 3D objects, and relies on the notion of a scene, a camera and an object to render.
+The object to render can be any data container of supported AMR datasets (either patch-based and octree-based datasets).
+The implementation of the volume rendering is based on integrating a transfer function along the direction of ray.
+
+#### Patch-based ray traversal
+
+TODO
+
+#### Octree ray traversal
+
+Casting rays through an octree can be achieved efficiently by relying on the octree structure.
+In order to abstract away the underlying layout of the data, we first construct an octree that contains all leaf cells in the data container.
+We store all cells as octs with no children, and mark them with their position within the data container, going from $0$ to $N_\mathrm{cell}-1$.
+Octs that are inserted in the process of building the tree are not marked nor indexed.
+We also compute the vertex-centered data for all cells in the container.
+Note that, contrary to the octree utilized to index the data from octree datasets, this octree may span multiple domains and contains all levels from the root level (that contains a single oct the size of the simulation domain) all the way down to the leaf cells.
+We then cast rays off the camera, and for each ray, we compute the ordered list of the $N$ cells it intersects with together with the intersection points along the ray [@revelles_efficient_parametric_algorithm_2000].
+In the following, we will write the coordinate along the ray as $t$, with the camera located at $t=0$.
+In general the tree may contain holes (this may happen if the data container is a region selector), so that the exit coordinate out of a cell may not coincide with the entry coordinate through the next cell. In practice, we solve this by storing for each cell both the entry and exit coordinates of the ray.
+
+The algorithm relies on the fact that if a ray passes through an oct and intersects with its six faces at coordinate along the ray $t_{xi}, t_{yi}, t_{zi}$ (on entry) and $t_{xo}, t_{yo}, t_{zo}$ (on exit), then its intersection with the inner cells' faces can be computed explicitly from these six values and their half point $(t_{xi}+t_{xo})/2, (t_{yi}+t_{yo})/2, (t_{zi}+t_{zo})/2$. This implies that each call to the algorithm only need computing one division and a few simple arithmetic comparisons.
+It also uses the fact that for a given oct, we can compute which cell the ray will intersect with first, and from any given cell, which cell the the ray will intersect next.
+
+The algorithm then works as follows. If the ray does not intersect with the root oct, then the algorithm returns an empty list of cell crossed and $t$ values.
+Otherwise, initialize an empty list of cells traversed and $t$-values. _a)_ Find the intersection of the ray with all six faces of the oct. _b)_ If the current oct is marked, store the entry and exit $t$-values and the index of the oct in their respective list and return. _c)_ If the current oct is not marked, find the first cell the ray intersects with and call the algorithm recursively (starting at step _a)_ with the oct contained in the cell, if any). _d)_ Find the next cell within the oct. If there is no next cell, return. Otherwise, call the algorithm recursively (starting at step _a)_ with the oct contained in the cell, if any) then go back to _d)_.
+On exit of the algorithm, we then have a list of cells and $t$-values.
+For each cell in the list, we then call the sampler with the vertex-centred values and the entry and exit coordinates.
+
+#### Sampling functions
+
+TODO
 
 ### Hardware-accelerated Volume Rendering
 
