Shameless self-citation

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -41,6 +41,12 @@ Otherwise, initialize an empty list of cells traversed and $t$-values. _a)_ Find
 On exit of the algorithm, we then have a list of cells and $t$-values.
 For each cell in the list, we then call the sampler with the vertex-centred values and the entry and exit coordinates.
 
+An example of the volume rendering of a galaxy in a zoom-in cosmological simulation made with RAMSES is shown on Figure {@fig:ramses-volume-rendering}.
+
+![
+Volume rendering of gas density isocontours around a galaxy in a cosmological zoom-in simulation performed with RAMSES. Adapted from [@cadiou_angular_momentum_2021].
+](images/volume_rendering/ramses-volume-rendering-galaxy.png){#fig:ramses-volume-rendering}
+
 #### Sampling functions
 
 TODO
