--- a/content/10.community_building.md
+++ b/content/10.community_building.md
@@ -37,17 +37,17 @@ When evaluating the level of engagement, we consider a few different classificat
 
 While there are other activities that individuals can participate in, these are the typical activities we see among participants in the community.
 The order, flowing from the first to the last, is the typical flow we see for an individual coming to participate in the community.
-The first step is typically to file an issue or bug report (occasionally these are requests for new features), followed by partipating in development-focused discussion on mailing lists.
+The first step is typically to file an issue or bug report (occasionally these are requests for new features), followed by participating in development-focused discussion on mailing lists.
 The next level of engagement typically involves the development of a new piece of functionality, refinement of existing code, or issuing a fix for a bug or issue.
 These take the form of pull requests (described in greater detail [here](#sec:development)) that can be reviewed and added to the code base.
 
 The next level of engagement centers around tasks that are not fully-aligned with pragmatic, code-driven scientific inquiry.
-The development of documentation is often viewed as orthogonal to the scientific process, and typically requires an iterative wrriting process.
+The development of documentation is often viewed as orthogonal to the scientific process, and typically requires an iterative writing process.
 Participation in code review, providing comments, feedback and suggestions to other authors, is another somewhat orthogonal task; it doesn't necessarily directly benefit the developer doing the reviewing (although it might) and it does not necessarily result in academic rewards (citations, authorship, etc).
 But, it does arise from a pragmatic (ensuring code reliability) or altruistic (the public good of the software) motivation, and is thus a deeper level of engagement.
 
 The final two activities, drafting enhancement proposals and closing bug reports, are the most engaged, and often the most removed from the academic motivation structure.
-Developing an [enhancement proposal](#sec:ytep)  for `yt` means iterating with other developers on the motivation behind and implementation of a large piece of functionality; it requires both motivation to engage with the community and the patience to build consensus amongst stakeholders.
+Developing an [enhancement proposal](#sec:ytep)  for `yt` means iterating with other developers on the motivation behind and implementation of a large piece of functionality; it requires both motivation to engage with the community and the patience to build consensus among stakeholders.
 Closing bug reports -- and the development work associated with identifying, tracking and fixing bugs -- requires patience and often repeated engagement with stakeholders.
 
 ### Engagement Metrics
