--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -1,7 +1,7 @@
 ## Development Procedure {#sec:development}
 
 `yt` is developed openly.
-During the Spring of 2017, development transitioned from occuring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
+During the Spring of 2017, development transitioned from occurring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
 Development occurs through the "pull request" model, wherein changes to the codebase are made and then requested to be included in the primary repository.
 Typically, there are two branches of development, and occasionally three.  The first of these is the "stable" branch, which is much slower-paced, and typically only modified during the release periods.
 The second is that of "master" (which is the conventional term in git terminology; the corresponding mercurial term would be "default") which is where current development takes place.
@@ -13,7 +13,7 @@ For instance, during the development of `yt` 4.0, the branch `yt-4.0` was where 
 This three-pronged approach generally has suited the community; the process of backporting changes from the "master" branch to the "stable" branch can be time-consuming.
 However, balancing the needs of a community requiring stable methods for analyzing data against the ease of development suggests that this is a toll worth paying.
 
-In general, the development of `yt` is reasonably top-heavy, with the majority of contributionscoming from a core group of individuals.
+In general, the development of `yt` is reasonably top-heavy, with the majority of contributions coming from a core group of individuals.
 We discuss the implications of this on sustainability in Section [sec:sustainability].
 
 ### Unit Testing {#sec:unit_testing}
