--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -14,7 +14,7 @@ For a grid volume that covers a given region, the relationship between the "inde
 
 yt provides a system for defining relationships between index-space and coordinate-space.
 During instantiation of a `Dataset` object, a helper object (`coordinates`, a subclass of `CoordinateHandler`) is created.
-This helper object tracks the correspondance between numerical axes and spatial axes (for instance, even in some  Cartesian datasets, axis 0 corresponds to $z$ rather than $x$), the names of axes, and the transformation and pixelization methods for visualization.
+This helper object tracks the correspondence between numerical axes and spatial axes (for instance, even in some  Cartesian datasets, axis 0 corresponds to $z$ rather than $x$), the names of axes, and the transformation and pixelization methods for visualization.
 In addition to these helper functions, the coordinate handler provides definitions for derived fields that describe local cell width (and orthogonal path length), positions in coordinate space as computed by index space coordinates, volumes, and surface areas.
 These coordinate handlers also provide transformations between different spaces, albeit using the somewhat undesirable method of conversion to reference cartesian frames and subsequent conversion to local coordinate frames.
 
