--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -39,7 +39,7 @@ It also uses the fact that for a given oct, we can compute which cell the ray wi
 The algorithm then works as follows. If the ray does not intersect with the root oct, then the algorithm returns an empty list of cell crossed and $t$ values.
 Otherwise, initialize an empty list of cells traversed and $t$-values. _a)_ Find the intersection of the ray with all six faces of the oct. _b)_ If the current oct is marked, store the entry and exit $t$-values and the index of the oct in their respective list and return. _c)_ If the current oct is not marked, find the first cell the ray intersects with and call the algorithm recursively (starting at step _a)_ with the oct contained in the cell, if any). _d)_ Find the next cell within the oct. If there is no next cell, return. Otherwise, call the algorithm recursively (starting at step _a)_ with the oct contained in the cell, if any) then go back to _d)_.
 On exit of the algorithm, we then have a list of cells and $t$-values.
-For each cell in the list, we then call the sampler with the vertex-centred values and the entry and exit coordinates.
+For each cell in the list, we then call the sampler with the vertex-centered values and the entry and exit coordinates.
 
 An example of the volume rendering of a galaxy in a zoom-in cosmological simulation made with RAMSES is shown on Figure {@fig:ramses-volume-rendering}.
 
