--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -28,7 +28,7 @@ One of the nicest aspects of this new unit system is that the symbolic algebra f
 YTArray is primarily useful for attaching units to NumPy `ndarray` instances.
 For scalar data, we have created the new `YTQuantity` class.
 `YTQuantity` is a subclass of `YTArray` with the requirement that the "array data" associated with the instance be limited to one element.
-`YTQuantity` is primarily useful for physical constants and ensures that the units are propogated correctly when composing quantities from arrays, physical constants, and unitless scalars:
+`YTQuantity` is primarily useful for physical constants and ensures that the units are propagated correctly when composing quantities from arrays, physical constants, and unitless scalars:
 
 ```python
 >>> from yt.utilities.physical_constants import
@@ -135,7 +135,7 @@ These data are available for a `Unit` object by accessing the `expr`, `dimension
 The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to add, remove, and modify atomic unit definitions present in `UnitRegistry` objects.
 A dictionary lookup table is also attached to the `UnitRegistry` object, providing an interface to look up unit symbols.
 In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata.
-Once a unit object is created, it will not recieve updates if the original unit registry is modified.
+Once a unit object is created, it will not receive updates if the original unit registry is modified.
 
 ### Creating YTArray and YTQuantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
@@ -215,7 +215,7 @@ To create quantities and arrays in units defined by a simulation coordinate syst
 This unit registry contains the metadata necessary to convert the array to CGS from some other known unit system and is available via the `unit_registry` attribute that is attached to all `Dataset` instances.
 
 We have modified the definition for `set_code_units` in the `StaticOutput` base class.
-In this new implemenation, the predefined `code_mass`, `code_length`, `code_time`, and `code_velocity` symbols are adjusted to the appropriate values and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit` attributes are attached to the `StaticOutput` instance.
+In this new implementation, the predefined `code_mass`, `code_length`, `code_time`, and `code_velocity` symbols are adjusted to the appropriate values and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit` attributes are attached to the `StaticOutput` instance.
 If there are frontend specific code units they should also be defined in subclasses by extending this function.
 
 #### Mixing modified unit registries {#sec:mixing-modified-unit-registries}
