start array operations

--- a/content/25.processing_and_analysis.md
+++ b/content/25.processing_and_analysis.md
@@ -3,3 +3,34 @@
 
 
 ### Array-like Operations
+
+In `yt`, a newly-constructed data selector contains no data -- this enables data selectors for large regions, in extremely large datasets, to be lightweight and cheap to construct.
+By ensuring that these objects don't immediately consume resources, they can be manipulated and operated on in a high-level fashion, without taxing the computational power.
+While these data objects *can* return the full set of data they include, `yt` also provides array-like operations that do not require immediate access to the full set of numerical values, and which align with the mental-model for data processing that `yt` exposes.
+As an example, consider the following two operations:
+
+```python
+dd = ds.all_data()
+dd["gas", "density"].max()
+```
+
+and
+
+```python
+dd = ds.all_data()
+dd.max(("gas", "density"))
+```
+
+Both are available in `yt`.
+As a side-effect of Python's object model, the first will access the `("gas", "density")` item in the object `dd`, itself a concatenated numpy array, and then execute the `max` method on it.
+The second will call the `max` method on the data object, supplying to it the name of the field.
+This allows `yt` to decide how to decompose, parallelize and process the data in a memory-efficient way, and spread across multiple processors.
+Additionally, by emphasizing that the "maximum" is being taken on the data object, rather than the numerical data, other operations can be exposed that build on the underlying data organization.
+For instance, taking the maximum along a given (spatial) axis:
+
+```python
+sp = ds.sphere("center", (10.0, "m"))
+sp.max(("gas", "temperature"), axis="z")
+```
+
+This translates our meaning -- find the maximum value along the z-axis -- into a dimensionality reduction operation that uses `yt`'s built-in "projection" method.
