Add pixelization section

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -6,6 +6,28 @@ Making this distinction is important, because it underscores the relationship be
 
 ### Pixelizing Variable-Mesh Objects
 
+The results of either projecting or slicing through a logically-cartesian finite volume dataset is represented in `yt` as a collection of pixel positions and widths.
+These objects, hereafter referred to as exposing the "variable mesh" interface (as originated in HippoDraw), are not typically suitable for direct visualization.
+Many visualization libraries, including matplotlib, would necessarily regard these as collections of patches of fixed size, supplying them to the underlying engine.
+To optimize for repeated rendering, `yt` provides its own "pixelization" routines that take advantage of the input data structures.
+These "pixelizers" (or "rasterizers") can account for periodic data, variable resolution, overlapping and disjoint datasets, and non-Cartesian coordinate systems.
+
+The pixelizers in `yt` are implemented in Cython, and they accept an input "image plane" buffer (with extent) as well as the variable mesh to be deposited.
+Pixelizers exist for cartesian coordinates, cylindrical and spherical coordinates, off-axis cartesian planes, and for the Mollweide orthographic projection.
+Each of these pixelizers follows a roughly identical process for depositing source pixels into the image plane.
+The outer loop is over the input pixels, $p_i$, composed of $x_i, y_i, dx_i, dy_i, v_i$, where $x$ and $y$ refer to the coordinate system; in practice this means they may actually represent the $r$, $\theta$, $\phi$ or other coordinates.
+
+ 1. Compute left and right edges of the bounding box for this pixel in the resolution of the image plane
+ 2. Iterate over the first image plane coordinate from the left edge to the right edge of the bounding box
+ 3. Iterate over the second image plane coordinate from the left edge to the right edge of the bounding box
+ 4. Map from the coordinate system to the image plane and deposit $v$
+
+In practice, this is a fast operation, as long as the inner loops are sufficiently well determined; for instance, when depositing an input pixel with a width of $w$ into an image plane where the pixel width corresponds to a width of $w/16$, only $16^2$ pixels (with a high-degree of sequential ordering) have to be iterated over.
+The spherical and cylindrical pixelization routines operate similarly, but are somewhat degraded by a lower degree of locality in the final mapping from coordinate system to image plane.
+
+Recent work has been done to port the pixelization routines to Rust and compiling these to WebAssembly, resulting in the development of the Widgyts project.
+Widgyts provides a browser-side Jupyterlab interface to the pixelization routines, enabling extremely low-latency exploration of datasets.
+
 ### Higher-Order Unstructured Mesh Elements
 
 ### Software Volume Rendering
